--- a/arsh/arsh.csproj
+++ b/arsh/arsh.csproj
@@ -3,12 +3,12 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">x86</Platform>
-    <ProjectGuid>{D84FF24D-D40A-45F9-8426-2E3930F84F3D}</ProjectGuid>
-    <OutputType>Exe</OutputType>
-    <RootNamespace>Dire</RootNamespace>
-    <AssemblyName>Dire</AssemblyName>
     <ProductVersion>12.0.0</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
+    <ProjectGuid>{2D2E6093-0241-4360-8033-5C1F24EAA200}</ProjectGuid>
+    <OutputType>Exe</OutputType>
+    <RootNamespace>arsh</RootNamespace>
+    <AssemblyName>arsh</AssemblyName>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|x86' ">
     <DebugSymbols>true</DebugSymbols>
@@ -33,7 +33,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="NetMQ">
-      <HintPath>..\..\netmq\src\NetMQ\bin\Debug\NetMQ.dll</HintPath>
+      <HintPath>..\..\NetMQ.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
